add rag query
